# universal-intelligence

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  README_WEB.md  SECURITY.md  pyproject.toml
playground/web/: index.html
