[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "universal-intelligence"
version = "1.2.0"
authors = [
    { name = "spacehendrix", email = "thespacehendrix@gmail.com" },
]
description = "Universal Intelligence"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/spacehendrix/universal-intelligence"
"Bug Tracker" = "https://github.com/spacehendrix/universal-intelligence/issues"

[project.optional-dependencies]
community = [
    "torch",
    "transformers",
    "huggingface_hub",
    "psutil",
    "accelerate",
    "protobuf",
    "llama-cpp-python"
]
mps = [
    "mlx",
    "mlx-lm",
]
cuda = [
    "llama-cpp-python",
    "auto-gptq",
    "optimum",
    "autoawq",
    "bitsandbytes",
    "accelerate",
]
mcp = [
    "mcp"
]
dev = [
    "ruff>=0.3.0",
    "black>=24.2.0",
    "isort>=5.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["universal_intelligence"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 300
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
]
ignore = ["B026", "E501", "RUF001"]

[tool.ruff.mccabe]
max-complexity = 50

[tool.ruff.isort]
known-first-party = ["universal_intelligence"]

[tool.black]
line-length = 300
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 300 